# stat-app

./: .gitignore  main.py  pyproject.toml
backend/: main.py
backend/app/core/: connectivity_reader.py  drift_reader.py  element_matcher.py  etabs_exporter.py  excel_reader.py  forces_reader.py  ifc_enricher.py  ifc_reader.py  ifc_writer.py  joint_reader.py  material_reader.py  rule_engine.py  section_reader.py
backend/app/models/: unified_element.py
backend/app/preliminary/: __init__.py  axis_generator.py  beam_sizer.py  column_sizer.py  constants.py  core_placer.py  load_calculator.py  orchestrator.py  schemas.py  seismic_validator.py  slab_designer.py  viewer_adapter.py  wall_optimizer.py
backend/app/routers/: compare.py  enrich.py  etabs.py  preliminary.py  validate.py
backend/app/utils/: normalize.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  components - Kısayol.lnk  index.css
frontend/src/components/report/: SummaryCards.jsx
frontend/src/components/shared/: Navbar.jsx  StatusBadge.jsx
frontend/src/components/upload/: DropZone.jsx
frontend/src/components/viewer/: DetailPanel.jsx  IFCScene.jsx
frontend/src/pages/: PreliminaryPage.jsx  ReportPage.jsx  UploadPage.jsx  ViewerPage.jsx
frontend/src/services/: api.js  excelReader.js
frontend/src/store/: useAppStore.js
frontend/src/utils/: colorPalette.js
